# fast-boolean-anf-transform

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
