[package]
name = "fast-boolean-anf-transform"
description = "Fast implementation of the boolean Algebraic Normal Form (ANF) transform"
version = "0.0.1"
edition = "2021"
authors = ["Thomas Prévost"]
license = "MIT OR Apache-2.0"
keywords = ["boolean", "algebraic", "normal", "form", "transform"]
categories = ["algorithms", "cryptography", "mathematics"]
repository = "https://github.com/thomasarmel/fast-boolean-anf-transform/"
exclude = [".github/*"]

[dependencies]
num-traits = "0.2.19"